--- a/demo/driveroute.html
+++ b/demo/driveroute.html
@@ -7,6 +7,7 @@
     <title>#AccessibleOllie Route Drive</title>
 
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.41.0/mapbox-gl.js'></script>
+    <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/turf/v2.0.0/turf.min.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.41.0/mapbox-gl.css' rel='stylesheet' />
 
     <style>
@@ -29,7 +30,7 @@
       .btn-control:hover {
         background-color: #4ea0da;
       }
-      .fileUpload {
+      #fileUpload {
         position: relative;
       }
       #kmlFile {
@@ -46,17 +47,19 @@
       }
     </style>
 
+    <script src="route.stops.js"></script>
     <script src="driveroute.js"></script>
   </head>
 
   <body>
     <div id='map'></div>
     <form id="pageForm" class="col s12">
-      <div class="fileUpload btn-control">
+      <div id="fileUpload" class="btn-control hide">
           <span>Upload KML File</span>
           <input id="kmlFile" type="file" />
       </div>
       <button id='showRoute' type="button" class='btn-control hide'>Show Route</nav>
+      <button id='hideStops' type="button" class='btn-control hide'>Hide Stops</nav>
       <button id='driveRoute' type="button" class='btn-control hide'>Drive Route</nav>
     </form>
   </body>
