--- a/demo/kml/drivekml.html
+++ b/demo/kml/drivekml.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <title>#AccessibleOllie Route Drive</title>
+    <title>#AccessibleOlli Route Drive</title>
 
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.41.0/mapbox-gl.js'></script>
     <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/turf/v2.0.0/turf.min.js'></script>
@@ -47,8 +47,7 @@
       }
     </style>
 
-    <script src="route.stops.js"></script>
-    <script src="driveroute.js"></script>
+    <script src="drivekml.js"></script>
   </head>
 
   <body>
