update stops and route style

--- a/demo/changes/drivechanges.html
+++ b/demo/changes/drivechanges.html
@@ -50,7 +50,7 @@
 
   <body>
     <div id='map'></div>
-    <button id='hideRoute' type="button" class='btn-control'>Hide Route</nav>
+    <button id='hideRoute' type="button" class='btn-control'>Show Route</nav>
     <button id='hideStops' type="button" class='btn-control'>Hide Stops</nav>
   </body>
 
